# sudoku_machine

./: CHANGELOG.md  Cargo.toml  LICENSE.txt  README.md  release-plz.toml  rust-toolchain.toml
.cargo/: config.toml
.github/: CODEOWNERS
.github/actions/install-rust-toolchain/: action.yaml
.github/workflows/: build-binaries.yaml  ci.yaml  release-binaries.yaml  release-plz.yaml  release.yaml
benches/: classic.rs  classic_bench.rs
src/: lib.rs  main.rs  plugins.rs  puzzles.rs  utility.rs
src/grids/: classic.rs
src/plugins/: common.rs  fps.rs  nav.rs  screens.rs
src/plugins/common/: bundles.rs  clipboard.rs  focus.rs  mod.rs  theme.rs
src/plugins/common/bundles/: dropdown.rs  mod.rs  puzzle_cell.rs  text_input.rs
src/plugins/common/theme/: button.rs  focus.rs  mod.rs  node.rs  text.rs
src/plugins/common/widgets/: dropdown.rs  mod.rs  text_input.rs
src/plugins/game/: classic.rs  full_kropki.rs  knight.rs  mod.rs
src/plugins/menu/: history.rs  home.rs  mod.rs  new_puzzle.rs
src/plugins/puzzles/: classic.rs
src/plugins/screens/: game.rs  history.rs  home.rs  new_puzzle.rs
src/puzzles/: classic.rs  full_kropki.rs  knight.rs  mod.rs
src/puzzles/classic/: bundle.rs  grid.rs  mod.rs  puzzle.rs
src/utility/: bitset.rs  element_set.rs  priority_queue.rs  seed.rs
wasm/: index.html
