[package]
name = "sudoku_machine"
version = "0.1.0"
edition = "2021"
description = "A Sudoku game built with Bevy"
license = "MIT"

[dependencies]
arboard = "3.4.0"
bevy = { version = "0.15", features = ["dynamic_linking"] }
dark-light = "1.1.1"
fastrand = "2.1.1"
indoc = "2.0.5"
num_enum = "0.7.3"
rand = "0.8.5"
rand_seeder = "0.3.0"
strum = "0.26.3"
strum_macros = "0.27.0"

[dev-dependencies]
divan = "0.1.14"
indoc = "2.0.5"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

# Enable more optimization in the release profile at the cost of compile time.
[profile.release]
# Compile the entire crate as one unit.
# Slows compile times, marginal improvements.
codegen-units = 1
# Do a second optimization pass over the entire program, including dependencies.
# Slows compile times, marginal improvements.
lto = "thin"

# Optimize for size in the wasm-release profile to reduce load times and bandwidth usage on web.
[profile.wasm-release]
# Default to release profile values.
inherits = "release"
# Optimize with size in mind (also try "z", sometimes it is better).
# Slightly slows compile times, great improvements to file size and runtime performance.
opt-level = "s"
# Strip all debugging information from the binary to slightly reduce file size.
strip = "debuginfo"

[profile.bench]
inherits = "release"
debug = true

[[bench]]
name = "classic"
harness = false
