[package]
name = "sudoku_machine"
version = "0.3.1"
edition = "2021"
description = "A Sudoku game built with Bevy"
license = "MIT"
authors = ["Mark Judy"]
repository = "https://github.com/mrkjdy/sudoku_machine"

[dependencies]
arrayvec = "0.7.6"
bevy = "0.16"
dark-light = "2.0"
fastrand = "2.1.1"
indoc = "2.0.7"
num_enum = "0.7.5"
rand = "0.9"
rand_seeder = "0.4"
strum = "0.27.2"
strum_macros = "0.27.2"

[dev-dependencies]
divan = "0.1.21"

[target.'cfg(target_os = "linux")'.dependencies]
futures-util = { version = "0.3.31", features = ["io"] }

[target.'cfg(not(target_family = "wasm"))'.dependencies]
arboard = "3.6.1"

[target.'cfg(target_family = "wasm")'.dependencies]
getrandom = { version = "0.3", features = ["wasm_js"] }
web-sys = { version = "0.3", features = ["Clipboard", "Navigator", "Window"] }
wasm-bindgen-futures = "0.4"
bevy_defer = "0.14.0"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

# Enable more optimization in the release profile at the cost of compile time.
[profile.release]
# Compile the entire crate as one unit.
# Slows compile times, marginal improvements.
codegen-units = 1
# Do a second optimization pass over the entire program, including dependencies.
# Slows compile times, marginal improvements.
lto = "thin"

# Optimize for size in the wasm-release profile to reduce load times and bandwidth usage on web.
[profile.wasm-release]
# Default to release profile values.
inherits = "release"
# Optimize with size in mind (also try "z", sometimes it is better).
# Slightly slows compile times, great improvements to file size and runtime performance.
opt-level = "s"
# Strip all debugging information from the binary to slightly reduce file size.
strip = "debuginfo"

[[bench]]
name = "classic_bench"
harness = false
